<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>opencv_cam</name>
    <version>0.2.0</version>
    <description>OpenCV camera driver</description>

    <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
    <license>BSD</license>

    <url type="repository">https://github.com/clydemcqueen/opencv_cam.git</url>
    <url type="bugtracker">https://github.com/clydemcqueen/opencv_cam/issues</url>

    <author>Clyde McQueen</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>camera_calibration_parsers</depend>
    <depend>OpenCV</depend>
    <depend>rclcpp</depend>
    <depend>ros2_shared</depend>
    <depend>sensor_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
